<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PostActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="45dp"


        android:src="@drawable/login" />

    <EditText
        android:id="@+id/post_activity_content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/post_activity_content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/post_activity_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/post_activity_response_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/post_activity_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/charcoal"
            app:itemBackground="@color/charcoal"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>

</LinearLayout>