<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e3e1e1"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="390dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/profile_gradient"
            android:orientation="vertical">

            <!--            <ImageView-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:layout_marginTop="45dp"-->
            <!--                android:contentDescription="profile picture"-->
            <!--                android:src="@drawable/david" />-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_main_profile_picture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/placeholder"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/charcoal"
                app:civ_border_width="5dp" />

            <TextView
                android:id="@+id/activity_main_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/placeholder"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_main_class_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pj_class"
                        android:textColor="@color/Sage_Green"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/activity_main_character_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/placeholder"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_main_spec_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Sage_Green"
                        android:text="@string/spec"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/main_activity_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/activity_main_character_spec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/placeholder"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_main_role_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role"
                        android:textColor="@color/Sage_Green"
                        android:textSize="22sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/activity_main_character_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/placeholder"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/activity_main_character_achievement_points_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/achievement_shield"
                app:tint="@color/Cool_Grey" />

            <TextView
                android:id="@+id/activity_main_character_achievement_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/placeholder"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/activity_main_honorable_kills_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/honorable_kills"
                app:tint="@color/Cool_Grey" />

            <TextView
                android:id="@+id/activity_main_honorable_kills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/placeholder"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/activity_main_character_guild_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/wow_icon"
                app:tint="@color/Cool_Grey" />

            <TextView
                android:id="@+id/activity_main_character_guild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/placeholder"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/activity_main_character_race_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/hourglass"
                app:tint="@color/Cool_Grey" />

            <TextView
                android:id="@+id/activity_main_character_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/placeholder"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/charcoal"
            app:itemBackground="@color/charcoal"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>

</LinearLayout>